--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,22 @@
 set -g default-terminal "screen-256color"
 
+# set the default prefix to control+a 
 set -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix
+
+# refresh config with r 
+unbind r
+bind r source-file ~/.tmux.conf
+
+# tpm plugin
+set -g @plugin 'tmux-plugins/tpm'
+
+# list of tmux plugins
+set -g @plugin 'jimeh/tmux-themepack' # to configure tmux theme
+
+set -g @themepack 'powerline/default/cyan' # use this theme for tmux
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
+
