solved escape time in nvim

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,6 +9,9 @@ bind-key C-a send-prefix
 unbind r
 bind r source-file ~/.tmux.conf
 
+#solve the delay problem in switching vim insert -> normal
+set -sg escape-time 5
+
 # tpm plugin
 set -g @plugin 'tmux-plugins/tpm'
 
