--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,6 +5,9 @@ set -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix
 
+# add mouse support
+set -g mouse on 
+
 # refresh config with r 
 unbind r
 bind r source-file ~/.tmux.conf
