--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -20,11 +20,13 @@ set -g @plugin 'jimeh/tmux-themepack' # to configure tmux theme
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
 
+# try out dracula theme: https://draculatheme.com/tmux
 set -g @themepack 'powerline/default/cyan' # use this theme for tmux
 
 set -g @resurrect-capture-pane-contents 'on' # allow tmux-ressurect to capture pane contents
 set -g @continuum-restore 'on' # enable tmux-continuum functionality
 
+set -g status-position top
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 
