--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,12 +19,18 @@ set -sg escape-time 5
 set -g @plugin 'tmux-plugins/tpm'
 
 # list of tmux plugins
-set -g @plugin 'jimeh/tmux-themepack' # to configure tmux theme
+# set -g @plugin 'jimeh/tmux-themepack' # to configure tmux theme
+set -g @plugin 'dracula/tmux'
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
 
-# try out dracula theme: https://draculatheme.com/tmux
-set -g @themepack 'powerline/default/cyan' # use this theme for tmux
+#dracula theme
+set -g @dracula-show-left-icon session
+set -g @dracula-plugins "time"
+set -g @dracula-time-colors "cyan dark_gray"
+set -g @dracula-show-powerline true
+set -g @dracula-refresh-rate 1
+set -g @dracula-time-format "%Y-%m-%d %H:%M:%S %A"
 
 set -g @resurrect-capture-pane-contents 'on' # allow tmux-ressurect to capture pane contents
 
