--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -19,22 +19,12 @@ set -sg escape-time 5
 set -g @plugin 'tmux-plugins/tpm'
 
 # list of tmux plugins
-# set -g @plugin 'jimeh/tmux-themepack' # to configure tmux theme
-set -g @plugin 'dracula/tmux'
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
-
-#dracula theme
-set -g @dracula-show-left-icon session
-set -g @dracula-plugins "time"
-set -g @dracula-time-colors "cyan dark_gray"
-set -g @dracula-show-powerline true
-set -g @dracula-refresh-rate 1
-set -g @dracula-time-format "%Y-%m-%d %H:%M:%S %A"
-
 set -g @resurrect-capture-pane-contents 'on' # allow tmux-ressurect to capture pane contents
-
 set -g status-position top
+
+source-file dracula.theme
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 
