--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -10,7 +10,7 @@ set -g mouse on
 
 # refresh config with r 
 unbind r
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.config/tmux/tmux.conf
 
 #solve the delay problem in switching vim insert -> normal
 set -sg escape-time 5
@@ -24,7 +24,7 @@ set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for 
 set -g @resurrect-capture-pane-contents 'on' # allow tmux-ressurect to capture pane contents
 set -g status-position top
 
-source-file dracula.theme
+source ~/.config/tmux/dracula.theme
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.config/tmux/tpm/tpm'
 
