--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -8,49 +8,6 @@ font_size 11.0
 
 hide_window_decorations yes
 
-# Gruvbox
-
-foreground #ebdbb2
-background #272727
-selection_foreground #655b53
-selection_background #ebdbb2
-url_color #d65c0d
-
-# Cursor 
-cursor #8fee96
-cursor_shape block
-
 background_opacity 0.95
 
-# black
-color0   #2f2f2f
-color8   #656565
-
-# red
-color1   #d75f5f
-color9   #d75f5f
-
-# green
-color2    #d4d232
-color10   #8fee96
-
-# yellow
-color3    #af865a
-color11   #cd950c
-
-# blue
-color4   #22c3a1
-color12  #22c3a1
-
-# magenta
-color5   #775759
-color13  #775759
-
-# cyan
-color6   #84edb9
-color14  #84edb9
-
-# white
-color7   #c0b18b
-color15  #d8d8d8
-
+include ./gruvbox.theme
