kitty do not append copied text, but replace

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -11,3 +11,6 @@ hide_window_decorations yes
 background_opacity 0.95
 
 include ./gruvbox.theme
+
+
+clipboard_control write-clipboard write-primary no-append
