--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -12,6 +12,7 @@ set -g mouse on
 unbind r
 bind r source-file ~/.config/tmux/tmux.conf
 
+set-option -g history-limit 500
 #solve the delay problem in switching vim insert -> normal
 set -sg escape-time 5
 
