--- a/vs_code/config/settings.json
+++ b/vs_code/config/settings.json
@@ -39,5 +39,5 @@
       "vim.highlightedyank.enable": true,
       "vim.hlsearch": true,
       "vim.leader": "<space>",
-      "vim.useSystemClipboard": true,
+      "vim.useSystemClipboard": true
 }
