--- a/vs_code/config/settings.json
+++ b/vs_code/config/settings.json
@@ -27,6 +27,9 @@
       "[typescriptreact]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
       },
+      "[python]": {
+        "editor.defaultFormatter": "ms-python.black-formatter"
+     },
 
     //project manager
       "projectManager.git.baseFolders": [
